--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "5.0.0-beta.31",
     "@reduxjs/toolkit": "^2.2.0",
+    "lucide-react": "^0.358.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
     "@types/react": "18.2.37",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.36",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
